--- a/app/src/main/res/layout/activity_date_pick_spinner_before_time.xml
+++ b/app/src/main/res/layout/activity_date_pick_spinner_before_time.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="20dp"
         android:padding="10dp"
         android:text="날짜를 설정하세요"
-        android:textSize="24dp"
+        android:textSize="20dp"
         android:textColor="@color/black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/datePicker"
@@ -25,7 +25,7 @@
         android:id="@+id/datePicker"
         android:layout_width="320dp"
         android:layout_height="200dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:calendarViewShown="false"
@@ -36,17 +36,35 @@
         />
 
     <Button
-        android:id="@+id/button_date_to_time"
-        android:layout_width="300dp"
+        android:id="@+id/button_date_quit"
+        android:layout_width="140dp"
         android:layout_height="52dp"
         android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:text="다음"
+        android:text="완료"
         android:textSize="18dp"
         android:background="#568A3D0A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/datePicker"
         app:layout_constraintTop_toBottomOf="@id/datePicker"/>
+
+    <Button
+        android:id="@+id/button_date_to_time"
+        android:layout_width="140dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:text="시간 설정"
+        android:textSize="18dp"
+        android:background="#568A3D0A"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/button_date_quit"
+        app:layout_constraintEnd_toEndOf="@id/datePicker"
+        app:layout_constraintTop_toBottomOf="@id/datePicker"/>
+
 
 </android.support.constraint.ConstraintLayout>
