--- a/app/src/main/res/layout/activity_popup_todo_update.xml
+++ b/app/src/main/res/layout/activity_popup_todo_update.xml
@@ -68,7 +68,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/todoName_todo"
+        android:id="@+id/todoName_todo_update"
         android:padding="5dp"
         android:layout_width="250dp"
         android:layout_height="32dp"
@@ -113,7 +113,7 @@
         android:text="날짜를 입력하세요"
         android:textSize="12dp"
         app:layout_constraintStart_toEndOf="@+id/todo_text_date"
-        app:layout_constraintTop_toBottomOf="@+id/todoName_todo" />
+        app:layout_constraintTop_toBottomOf="@+id/todoName_todo_update" />
 
     <TextView
         android:id="@+id/todo_text_dline"
