--- a/app/src/main/res/layout/activity_date_pick_spinner_before_time.xml
+++ b/app/src/main/res/layout/activity_date_pick_spinner_before_time.xml
@@ -36,14 +36,13 @@
         />
 
     <Button
-        android:id="@+id/button_date_quit"
-        android:layout_width="140dp"
+        android:id="@+id/button_date_delete"
+        android:layout_width="92dp"
         android:layout_height="52dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:text="완료"
+        android:text="삭제"
         android:textSize="18dp"
         android:background="#568A3D0A"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,11 +50,25 @@
         app:layout_constraintTop_toBottomOf="@id/datePicker"/>
 
     <Button
-        android:id="@+id/button_date_to_time"
-        android:layout_width="140dp"
+        android:id="@+id/button_date_quit"
+        android:layout_width="92dp"
         android:layout_height="52dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:text="완료"
+        android:textSize="18dp"
+        android:background="#568A3D0A"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/button_date_delete"
+        app:layout_constraintTop_toBottomOf="@id/datePicker"/>
+
+    <Button
+        android:id="@+id/button_date_to_time"
+        android:layout_width="92dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:text="시간 설정"
